--- a/io.github.mfat.tvhplayer.yml
+++ b/io.github.mfat.tvhplayer.yml
@@ -29,6 +29,8 @@ modules:
       - --enable-libmp3lame
       - --enable-libvorbis
       - --enable-libopus
+      - --enable-openssl
+
     sources:
       - type: archive
         url: https://ffmpeg.org/releases/ffmpeg-4.4.5.tar.xz
