--- a/io.github.mfat.tvhplayer.yml
+++ b/io.github.mfat.tvhplayer.yml
@@ -30,6 +30,7 @@ modules:
       - --enable-libvorbis
       - --enable-libopus
       - --enable-openssl
+      - --enable-nonfree
 
     sources:
       - type: archive
